testdata/baselines/reference/submodule/conformance/moduleExportAssignment.errors.txt
use.js(1,22): error TS2307: Cannot find module './npmlog' or its corresponding type declarations.


==== use.js (1 errors) ====
    var npmlog = require('./npmlog')
                         ~~~~~~~~~~
!!! error TS2307: Cannot find module './npmlog' or its corresponding type declarations.
    npmlog.x
    npmlog.on
    
==== npmlog.js (0 errors) ====
    class EE {
        /** @param {string} s */
        on(s) { }
    }
    var npmlog = module.exports = new EE()
    
    npmlog.on('hi') // both references should see EE.on
    module.exports.on('hi') // here too
    
    npmlog.x = 1
    module.exports.y = 2
    npmlog.y
    module.exports.x
    